# sesquicentennial_ai_workflows

./: .gitignore  README.md  pyproject.toml
fixtures/: analyze_images.csv
prompts/: amc.md  gemini-htr.md  htr.md  htr_amc.md  maps.md  metadata.md  subjects_from_abstract.md  vtt-mods.md  vtt.md
src/: htr.py
tamu_batch_ai/: __init__.py  config.py  monet.py  parsers.py  prompt_manager.py
tamu_batch_ai/claude/: __init__.py  htr.py
tamu_batch_ai/cloudviz/: __init__.py  cloudviz.py
tamu_batch_ai/csv_generator/: __init__.py  generate.py
tamu_batch_ai/gemini/: gemini.py
tamu_batch_ai/lc_reconcile/: lcreconcile.py
tamu_batch_ai/olm_pdf/: olmpdf.py
