[tool.poetry]
name = "tamu-batch-ai"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.59.0"
pillow = "^11.3.0"
pandas = "^2.3.1"
python-dateutil = "^2.9.0.post0"
click = "^8.2.1"
tqdm = "^4.67.1"

[tool.poetry.scripts]
batch_ai = "tamu_batch_ai.monet:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
