[tool.poetry]
name = "tamu-batch-ai"
version = "0.1.1"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
anthropic = "^0.59.0"
pillow = "^11.3.0"
pandas = "^2.3.1"
python-dateutil = "^2.9.0.post0"
click = "^8.2.1"
tqdm = "^4.67.1"
google-cloud-vision = "^3.10.2"
olmocr = "^0.3.4"
mlx-vlm = "^0.3.3"
pypdf2 = "^3.0.1"
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
bs4 = "^0.0.2"

[tool.poetry.scripts]
batch_ai = "tamu_batch_ai.monet:cli"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
